# burncloud

./: .env.example  .geminiignore  .gitattributes  .gitignore  .ralphrc  CLAUDE.md  Cargo.toml  Cargo.toml.backup  Cargo.toml.bak  Dockerfile  GEMINI.md  HISTORY.md  LICENSE  MESSAGE.md  README.md  README_CN.md  TODO.md  build.rs  burncloud.db-shm  burncloud.db-wal  burncloud.rc  clippy.toml  config.json  deny.toml  progress.txt  run.bat  spec.md
crates/auto-update/: Cargo.toml
crates/auto-update/examples/: update_example.rs
crates/auto-update/src/: config.rs  error.rs  lib.rs  updater.rs
crates/burncloud-code/: Cargo.toml
crates/burncloud-database-models/: Cargo.toml
crates/burncloud-download/: Cargo.toml
crates/burncloud-download/docs/: rust-download.md
crates/burncloud-download/src/: lib.rs
crates/burncloud-service-monitor/: Cargo.toml
crates/burncloud-service-monitor/examples/: basic_usage.rs
crates/burncloud-service-monitor/src/: types.rs
crates/cli/: Cargo.toml
crates/cli/src/: bundle.rs  channel.rs  client.rs  commands.rs  currency.rs  group.rs  install.rs  lib.rs  log.rs  monitor.rs  output.rs  price.rs  protocol.rs  token.rs  user.rs
crates/client/: Cargo.toml  build.rs  tailwind.config.js
crates/client-models/: Cargo.toml
crates/client-models/src/: detail.rs  lib.rs  models.rs
crates/client-shared/: Cargo.toml
crates/client-shared/src/: styles.rs
crates/client/crates/client-access/: Cargo.toml
crates/client/crates/client-api/: Cargo.toml
crates/client/crates/client-burngrid/: Cargo.toml
crates/client/crates/client-connect/: Cargo.toml
crates/client/crates/client-dashboard/: Cargo.toml
crates/client/crates/client-deploy/: Cargo.toml
crates/client/crates/client-finance/: Cargo.toml
crates/client/crates/client-log/: Cargo.toml
crates/client/crates/client-models/: Cargo.toml
crates/client/crates/client-monitor/: Cargo.toml
crates/client/crates/client-playground/: Cargo.toml
crates/client/crates/client-register/: Cargo.toml
crates/client/crates/client-settings/: Cargo.toml
crates/client/crates/client-shared/: Cargo.toml  README.md
crates/client/crates/client-tray/: Cargo.toml
crates/client/crates/client-users/: Cargo.toml
crates/client/scripts/: check-ui-conventions.ps1  check-ui-conventions.sh
crates/client/src/: app.rs  lib.rs  main.rs  tests.rs
crates/client/src/assets/: tailwind.css
crates/client/src/components/: app_styles.rs  guest_layout.rs  layout.rs  (+3 more)
crates/code/: Cargo.toml
crates/code/src/: repl.rs  tools.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: auto_update.rs  config.rs  constants.rs  error.rs  lib.rs  price_u64.rs  pricing_config.rs  repository.rs  types.rs  utils.rs  validation.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config_manager.rs  lib.rs  model_manager.rs
crates/database/: Cargo.toml
crates/database-download/: Cargo.toml
crates/database/examples/: basic_usage.rs  default_location.rs
crates/database/src/: database.rs  error.rs  lib.rs  migration.rs  placeholder.rs  schema.rs
crates/database/tests/: api_compatibility_tests.rs  common.rs  cross_platform_tests.rs  database_unit_tests.rs  error_handling_tests.rs  integration_tests.rs  migration_rename_tests.rs  performance_tests.rs
crates/download/: Cargo.toml
crates/download/docs/: rust-download.md
crates/download/src/: lib.rs  main.rs
crates/installer/: Cargo.toml
crates/installer/src/: bundle.rs  error.rs  installer.rs  lib.rs  npm.rs  platform.rs  registry.rs  software.rs
crates/loops/: Cargo.toml  README.md
crates/loops/acceptance/: aesthetic-optimize-acceptance.md  aesthetic-optimize-agent-prompt.md  css-optimize-acceptance.md  css-optimize-agent-prompt.md  jobs-aesthetic-agent-prompt.md
crates/loops/src/: cli.rs  lib.rs  lock.rs  log.rs  main.rs  page_progress.rs  paths.rs  process.rs  server.rs  state.rs
crates/loops/tests/: regex_compilation_tests.rs
crates/router/: Cargo.toml  README.md
crates/router/examples/: configure_apikey_test.rs
crates/router/scripts/: check-router-deps.sh
crates/router/src/: adaptive_limit.rs  affinity.rs  aimd_limiter.rs  billing.rs  channel_health_manager.rs  channel_state.rs  circuit_breaker.rs  config.rs  exchange_rate.rs  health_probe.rs  http_pool.rs  lib.rs  limiter.rs  metrics.rs  model_router.rs  notification.rs  order_type.rs  passthrough.rs  price_sync.rs  pricing_loader.rs  proxy.rs  proxy_logic.rs  rate_budget.rs  response_parser.rs  response_quality.rs  smart_circuit_breaker.rs  state.rs  stream_parser.rs  stream_peek.rs  token_counter.rs
crates/router/tests/: adaptor_tests.rs  auth_tests.rs  balancer_tests.rs  billing_observability_tests.rs  boundary_tests.rs  common.rs  e2e_billing_tests.rs  failover_tests.rs  integration_test.rs  l6_observability_tests.rs  mask_token_tests.rs  order_type_e2e.rs  price_sync_tests.rs  pricing_tests.rs  quota_tests.rs  resilience_tests.rs  shaper_tests.rs  token_counting_tests.rs  token_expiry_tests.rs  vertex_full_test.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: api.rs  bootstrap.rs  lib.rs  logging.rs  telemetry.rs  tracing_otel.rs
crates/server/tests/: api_tests.rs  bootstrap_tests.rs  gateway_tests.rs  group_routing_tests.rs  log_api_tests.rs  management_tests.rs  test_utils.rs
crates/service/: Cargo.toml  README.md
crates/service-models/: Cargo.toml
crates/service-monitor/: Cargo.toml
crates/service/src/: lib.rs
crates/templates/client-module/: Cargo.toml  cargo-generate.toml
crates/templates/database-crate/: Cargo.toml
crates/templates/service-crate/: Cargo.toml
crates/tests/: Cargo.toml  config.json
crates/tests/src/: lib.rs
crates/tests/tests/: aliyun_e2e_test.rs  api_auth.rs  api_channel.rs  api_log.rs  api_status.rs  api_tests.rs  auth_test.rs  bootstrap_master_key_restart_test.rs  bootstrap_master_key_test.rs  db_compat.rs  e2e_smoke.rs  integration_test.rs  logging_test.rs  pricing_u64_test.rs  relay_test.rs  ui_tests.rs  v1_chat_completions.rs
template/database-crate/: Cargo.toml
template/database-crate/src/: lib.rs
(+854 files in other folders)
