[workspace]
members = [
    "crates/auto-update",
    "crates/cli",
    "crates/client",
    "crates/client/crates/client-api",
    "crates/client/crates/client-dashboard",
    "crates/client/crates/client-deploy",
    "crates/client/crates/client-models",
    "crates/client/crates/client-monitor",
    "crates/client/crates/client-settings",
    "crates/client/crates/client-shared",
    "crates/client/crates/client-tray",
    "crates/client/crates/client-users",
    "crates/client/crates/client-finance",
    "crates/client/crates/client-access",
    "crates/client/crates/client-log",
    "crates/client/crates/client-connect",
    "crates/client/crates/client-playground",
    "crates/client/crates/client-register",
    "crates/code",
    "crates/common",
    "crates/core",
    "crates/database",
    "crates/database/crates/database-download",
    "crates/database/crates/database-models",
    "crates/database/crates/database-router",
    "crates/database/crates/database-setting",
    "crates/database/crates/database-user",
    "crates/download",
    "crates/download/crates/download-aria2",
    "crates/router",
    "crates/router/crates/router-aws",
    "crates/server",
    "crates/service",
    "crates/service/crates/service-ip",
    "crates/service/crates/service-models",
    "crates/service/crates/service-monitor",
    "crates/service/crates/service-setting",
    "crates/service/crates/service-inference",
    "crates/service/crates/service-redis",
    "crates/service/crates/service-user",
    "crates/tests",
]

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.11"
dotenvy = "0.15"
log = "0.4"
semver = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# UI Framework
dioxus = { version = "0.7.2", default-features = false }
dioxus-router = "0.7.2"
dioxus-liveview = { version = "0.7.2", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

# Utilities
async-trait = "0.1"
dirs = "5.0"
tempfile = "3.8"
futures-util = "0.3"
once_cell = "1.19"
dashmap = "5.5"
time = "0.3"
hex = "0.4"
url = "2.5"
rand = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8.7", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"
http = "1.0"

# Cryptography
sha2 = "0.10"
md5 = "0.7"
hmac = "0.12"
jsonwebtoken = "9"

# Archive
zip = "0.6"

# Testing
tokio-test = "0.4"

# System
libc = "0.2"
winapi = { version = "0.3", features = ["winuser", "pdh", "psapi", "winbase", "winnt", "fileapi", "handleapi", "winerror", "sysinfoapi", "winreg"] }

# UI
dioxus-desktop = "0.7.2"

# Application
self_update = { version = "0.42.0", features = ["archive-zip"] }
systray = "0.4.0"
tracing = "0.1"
redis = { version = "0.24", features = ["tokio-comp"] }

# Internal crates
burncloud-auto-update = { path = "crates/auto-update" }
burncloud-cli = { path = "crates/cli" }
burncloud-client = { path = "crates/client" }
burncloud-client-api = { path = "crates/client/crates/client-api" }
burncloud-client-dashboard = { path = "crates/client/crates/client-dashboard" }
burncloud-client-deploy = { path = "crates/client/crates/client-deploy" }
burncloud-client-models = { path = "crates/client/crates/client-models" }
burncloud-client-monitor = { path = "crates/client/crates/client-monitor" }
burncloud-client-settings = { path = "crates/client/crates/client-settings" }
burncloud-client-shared = { path = "crates/client/crates/client-shared" }
burncloud-client-tray = { path = "crates/client/crates/client-tray" }
burncloud-client-users = { path = "crates/client/crates/client-users" }
burncloud-client-finance = { path = "crates/client/crates/client-finance" }
burncloud-client-access = { path = "crates/client/crates/client-access" }
burncloud-client-log = { path = "crates/client/crates/client-log" }
burncloud-client-connect = { path = "crates/client/crates/client-connect" }
burncloud-client-playground = { path = "crates/client/crates/client-playground" }
burncloud-client-register = { path = "crates/client/crates/client-register" }
burncloud-code = { path = "crates/code" }
burncloud-common = { path = "crates/common" }
burncloud-core = { path = "crates/core" }
burncloud-database = { path = "crates/database" }
burncloud-database-download = { path = "crates/database/crates/database-download" }
burncloud-database-models = { path = "crates/database/crates/database-models" }
burncloud-database-router = { path = "crates/database/crates/database-router" }
burncloud-database-setting = { path = "crates/database/crates/database-setting" }
burncloud-database-user = { path = "crates/database/crates/database-user" }
burncloud-download = { path = "crates/download" }
burncloud-download-aria2 = { path = "crates/download/crates/download-aria2" }
burncloud-router = { path = "crates/router" }
burncloud-router-aws = { path = "crates/router/crates/router-aws" }
burncloud-server = { path = "crates/server" }
burncloud-service = { path = "crates/service" }
burncloud-service-ip = { path = "crates/service/crates/service-ip" }
burncloud-service-models = { path = "crates/service/crates/service-models" }
burncloud-service-monitor = { path = "crates/service/crates/service-monitor" }
burncloud-service-setting = { path = "crates/service/crates/service-setting" }
burncloud-service-inference = { path = "crates/service/crates/service-inference" }
burncloud-service-redis = { path = "crates/service/crates/service-redis" }
burncloud-service-user = { path = "crates/service/crates/service-user" }

[package]
name = "burncloud"
version = "0.1.17"
edition = "2021"
description = "A cross-platform file sharing and synchronization tool"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["file-sharing", "sync", "cloud", "p2p"]
categories = ["command-line-utilities", "network-programming"]

[features]
default = []

[[bin]]
name = "burncloud"
path = "src/main.rs"

[dependencies]
burncloud-common.workspace = true
burncloud-core.workspace = true
burncloud-cli.workspace = true
burncloud-server.workspace = true
burncloud-code.workspace = true
burncloud-client = { workspace = true, default-features = false, features = ["liveview"] }
burncloud-router.workspace = true

tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true