[package]
name = "burncloud-database-models"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-database = { path = "../burncloud-database" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }