[package]
name = "burncloud-download"
version = "0.1.0"
edition = "2021"

[dependencies]
burncloud-database-download = { path = "../burncloud-database-download" }
burncloud-download-aria2 = { path = "../burncloud-download-aria2" }
burncloud-database = { path = "../burncloud-database" }
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true