[package]
name = "burncloud-cli"
version = "0.1.10"
edition = "2021"
description = "Command-line interface for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
burncloud-common = { path = "../common" }
burncloud-core = { path = "../core" }
burncloud-auto-update = { path = "../auto-update" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true