[package]
name = "burncloud-cli"
version = "0.1.10"
edition = "2021"
description = "Command-line interface for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
burncloud-common.workspace = true
burncloud-core.workspace = true
burncloud-auto-update.workspace = true
burncloud-database.workspace = true
burncloud-database-models.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true