[package]
publish.workspace = true
name = "burncloud-cli"
version = "0.1.11"
edition = "2021"
description = "Command-line interface for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
burncloud-common.workspace = true
burncloud-core.workspace = true
burncloud-auto-update.workspace = true
burncloud-database.workspace = true
burncloud-database-billing.workspace = true
burncloud-database-channel.workspace = true
burncloud-database-model.workspace = true
burncloud-database-user.workspace = true
burncloud-database-router.workspace = true
burncloud-installer.workspace = true
burncloud-database-sys.workspace = true
bcrypt.workspace = true
uuid.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
chrono.workspace = true
[lints]
workspace = true
