[package]
name = "burncloud-client-models"
version = "0.1.3"
edition = "2021"
description = "Model management page for BurnCloud client applications"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[[bin]]
name = "model_demo"
path = "src/main.rs"

[[bin]]
name = "integration_test"
path = "src/integration_test.rs"
test = false

[lib]
name = "burncloud_client_models"
path = "src/lib.rs"

[dependencies]
dioxus.workspace = true
dioxus-desktop = "0.6.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sha2 = "0.10"
md5 = "0.7"
futures-util = "0.3"
burncloud-service-models = { path = "../service-models" }
burncloud-database = { path = "../database" }
burncloud-database-models = { path = "../database-models" }

[dev-dependencies]
tempfile = "3.8"