[package]
name = "burncloud-client-shared"
version = "0.1.3"
edition = "2021"
description = "Shared components and styles for BurnCloud client applications"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-router = "0.6.3"