[package]
name = "burncloud-client"
version = "0.1.5"
edition = "2021"
description = "Desktop GUI client application for BurnCloud AI model deployment platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
liveview = ["dep:dioxus-liveview", "dep:axum", "dep:burncloud-database"]

[dependencies]
burncloud-common = { workspace = true }
burncloud-client-api.workspace = true
burncloud-client-dashboard.workspace = true
burncloud-client-deploy.workspace = true
burncloud-client-models.workspace = true
burncloud-client-monitor.workspace = true
burncloud-client-settings.workspace = true
burncloud-client-shared.workspace = true
burncloud-client-users.workspace = true
burncloud-client-finance.workspace = true
burncloud-client-access.workspace = true
burncloud-client-log.workspace = true
burncloud-client-burngrid.workspace = true
burncloud-client-playground.workspace = true
burncloud-client-register.workspace = true
dioxus = { workspace = true, features = ["desktop", "router"] }
dioxus-router.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true

# LiveView specific dependencies
dioxus-liveview = { workspace = true, optional = true }
axum = { version = "0.8.7", features = ["macros", "ws"], optional = true }
burncloud-database = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
burncloud-client-tray.workspace = true    

[dev-dependencies]
dioxus-ssr = "0.7.2"
