[package]
name = "burncloud-client"
version = "0.1.5"
edition = "2021"
description = "Desktop GUI client application for BurnCloud AI model deployment platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
liveview = ["dep:dioxus-liveview", "dep:axum", "dep:burncloud-database"]

[dependencies]
burncloud-common = { workspace = true }
burncloud-client-api.workspace = true
burncloud-client-dashboard.workspace = true
burncloud-client-deploy.workspace = true
burncloud-client-models.workspace = true
burncloud-client-monitor.workspace = true
burncloud-client-settings.workspace = true
burncloud-client-shared.workspace = true
burncloud-client-users.workspace = true
burncloud-client-finance.workspace = true
burncloud-client-access.workspace = true
burncloud-client-log.workspace = true
burncloud-client-connect.workspace = true
burncloud-client-playground.workspace = true
burncloud-client-register.workspace = true
dioxus = { workspace = true, features = ["desktop", "router"] }
dioxus-router.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
png.workspace = true

# LiveView specific dependencies
dioxus-liveview = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
burncloud-database = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
burncloud-client-tray.workspace = true

[dev-dependencies]
dioxus-ssr = { workspace = true }

# winres is always included as a build dependency so cross-compilation works
# (e.g., building Windows .exe from Linux CI). The build.rs script checks the
# TARGET environment variable and only uses winres when building for Windows.
[build-dependencies]
winres.workspace = true
