[package]
name = "burncloud-common"
version = "0.1.9"
edition = "2021"
description = "Common utilities and types for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "common", "utilities"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
sqlx.workspace = true
chrono.workspace = true
bcrypt = "0.15"