[package]
name = "burncloud-core"
version = "0.1.9"
edition = "2021"
description = "Core functionality for the BurnCloud platform"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
homepage = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]
keywords = ["burncloud", "core", "model-management"]
categories = ["development-tools"]

[dependencies]
burncloud-common.workspace = true
tokio.workspace = true
anyhow.workspace = true