[package]
name = "burncloud-database"
version = "0.1.0"
edition = "2021"
authors = ["BurnCloud Team <team@burncloud.com>"]
description = "Core database abstractions and traits for BurnCloud AI management system"
documentation = "https://docs.rs/burncloud-database"
homepage = "https://github.com/burncloud/burncloud-database"
repository = "https://github.com/burncloud/burncloud-database"
license = "MIT OR Apache-2.0"
keywords = ["database", "ai", "model-management", "burncloud", "async"]
categories = ["database", "api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "default_location"
path = "examples/default_location.rs"
